--- a/Digit Recognition.ipynb
+++ b/Digit Recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r\"D:\\github\\Neural Network From Scratch\\Dataset\\digit-recognizer\\test.csv\")"
+    "data = pd.read_csv(r\"path to csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "[2 rows x 784 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "(28000, 784)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,53 @@
     "    Z1 = W1.dot(X)+b1\n",
     "    A1 = ReLU(Z1)\n",
     "    Z2 = W2.dot(A1)+b2\n",
-    "    A2 = Softmax(Z2)"
+    "    A2 = Softmax(A1)\n",
+    "    return Z1, A1, Z2, A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_hot(Y):\n",
+    "    one_hot_Y = np.zeros((Y.size(), Y.max() + 1))\n",
+    "    one_hot_Y[np.arrange(Y.size), Y] = 1\n",
+    "    one_hot_Y = one_hot_Y.T\n",
+    "    return one_hot_Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deriv_ReLU(Z):\n",
+    "    return Z > 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is Incomplete Function: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backprop(Z1, A1, Z2, A2, W2, Y):\n",
+    "    m = Y.size\n",
+    "    one_hot_Y = one_hot_Y(Y)\n",
+    "    dZ2 =  A2 - one_hot_Y\n",
+    "    dW2 = 1/m*dZ2.dot(A1.T)\n",
+    "    db2 = 1/m* np.sum(dZ2, 2)\n",
+    "    dZ1 = W2.T.dot(dZ2) * deriv_ReLU(Z1)"
    ]
   }
  ],
